# delivery

./: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
delivery/: asgi.py  settings.py
delivery/auth/: exceptions.py  schema.py  service.py  views.py
delivery/cities/: controller.py  exceptions.py  schemas.py  service.py  views.py
delivery/core/: files.py  required_user.py  schema.py  security.py  session.py  validation.py
delivery/core/controllers/: actor.py  base.py
delivery/core/depends/: auth.py  db.py
delivery/core/enums/: actors.py  order_status.py
delivery/core/models/: base.py
delivery/database/: __init__.py  actor.py  city.py  order.py  order__dish.py  restaurant.py  restaurant__city.py  types.py  user.py
delivery/orders/: dto.py  exceptions.py  forms.py  repository.py  schemas.py  service.py  validations.py  views.py
delivery/restaurants/: controller.py  dto.py  exceptions.py  form.py  schema.py  service.py  validations.py
delivery/restaurants/views/: category.py  dish.py  restaurant.py
delivery/users/: controller.py  form.py  schema.py  service.py  views.py
migrations/: env.py
migrations/versions/: 21d725ef99dd_adds_data.py  941f3a2bde00_init.py
scripts/: upload_static.py
